changed some css

--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@
 .main-header .pic-wrapper .pic {
   width: 40vmin;
   height: 40vmin;
-  background: url(../../../pic/ich.jpg);
+  background: url(../pic/ich.jpg);
   background-size: cover;
   background-position: center center;
   background-repeat: none;
