--- a/src/scss/components/_mainHeader.scss
+++ b/src/scss/components/_mainHeader.scss
@@ -36,7 +36,7 @@
         .pic{
             width: 40vmin;
             height: 40vmin;
-            background: url(../../../pic/ich.jpg);
+            background: url(../pic/ich.jpg);
             background-size: cover;
             background-position: center center;
             background-repeat: none;
