--- a/src/scss/components/_mainHeader.scss
+++ b/src/scss/components/_mainHeader.scss
@@ -2,7 +2,7 @@
 
 .main-header{
     height: 100vh;
-    width: 100vw;
+    max-width: 100vw;
     display: flex;
 
     .title-wrapper{
@@ -30,7 +30,7 @@
     }
 
     .pic-wrapper{
-        width: 50%;
+        width: 40%;
         @include flex(flex-end, center, row);
 
         .pic{
@@ -41,7 +41,6 @@
             background-position: center center;
             background-repeat: none;
             border-radius: 50%;
-            margin-right: 2rem;
             box-shadow: -20px -20px 30px rgb(10, 10, 10);
         }
     }
